# Gitter_Committer

./: .gitignore  NOTES.md  README.md  TODO.md  gittercommitter.py  llm_interface.py  pyproject.toml  requirements.txt
extension/: CHANGELOG.md  README.md  extension.js  package-lock.json  package.json
prompts/: basic_PR_template.txt  summary.txt
src/: diff_utils.py  gittercommitter.py  llm_interface.py
src/gittercommitter/: diff_utils.py  gccommit.py  gcpc.py  gcpull.py  llm_interface.py
src/gittercommitter/prompts/: basic_PR_template.txt  commit_message_prompt.txt  pull_summary.txt
src/test/: scrapfile.txt
test/: scrapfile.txt
